# erc20_detector

./: .env.example  .gitignore  Dockerfile  alembic.ini  app.py  config.py  docker-compose.yml  manage.py  pyproject.toml  readMe.md
db/: db.py
db/migrations/: env.py
db/migrations/versions/: 2024-03-18__13_19__d1713ffdbee2__.py
erc20_detector_app/: __init__.py  constants.py  contract_analyze_service.py  schemas.py
erc20_detector_app/models/: __init__.py  compressed_text.py  contract.py
erc20_detector_app/storages/: __init__.py  contract_storage.py
rabbitmq/: __init__.py  consumer.py  publicher.py  rabbitmq.py
